Github #172 Navigation flickers on scroll within project pages -- Fixed javascript error -- Fixed navigation bar overlay on project creation modal

--- a/src/components/TopBar/TopBar.scss
+++ b/src/components/TopBar/TopBar.scss
@@ -21,7 +21,7 @@ $tc-body-large     		: 20px;
   line-height: 60px;
   height: 60px;
   background-color: $tc-black;
-  z-index: 100;
+  z-index: 20;
   padding: 0 20px;
   position: fixed;
   top: 0;
